--- a/src/main/webapp/dashboard.html
+++ b/src/main/webapp/dashboard.html
@@ -4,10 +4,11 @@
 <meta charset="ISO-8859-1">
 <title>Admin Dashboard</title>
 </head>
-<body>
-	<a href="index.html">Home</a> |
-	<a href="index.html">Logout</a> |
-	<a href="changepassword.html">Change Password</a> |
+<body bgcolor="skyblue" align="center">
+	<a href="index.html"><input type="submit" value="Home"></a> |
+	<a href="index.html"><input type="submit" value="Logout"></a> |
+	<a href="changepassword.html"><input type="submit" value="Change password"></a> |<br>
+	<img src="https://images.financialexpress.com/2020/08/Air-India-Reuters.jpg">
 	
 	<hr>
 </body>
