--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,8 +4,12 @@
 <meta charset="UTF-8">
 <title>Welcome To Fly Away Ticket Booking Portal</title>
 </head>
-<body>
-	<a href="login.html">Admin Login</a>
+
+<body bgcolor="cyan" >
+<center>
+	<a href="login.html">
+<input type="submit" value="Admin-Login">
+</a>
 	<hr>
 	<h1>Search For Flights</h1>
 	<form name="searchForFlights" method="GET" action="search-flights">
@@ -18,6 +22,7 @@
 	</form>
 	<form name ="seeAllFlights" method="GET" action="see-all-flights">
 		<input type="submit" value="See All Flights">
-	</form>	
+	</form>
+</center>
 </body>
 </html>
