--- a/src/main/webapp/passwordverified.html
+++ b/src/main/webapp/passwordverified.html
@@ -4,8 +4,11 @@
 <meta charset="ISO-8859-1">
 <title>password changed</title>
 </head>
-<body>
+<body align="center">
 	<h1>your password has been changed successfully </h1>
-	<a href="dashboard.html">Dashboard</a>
+	
+	<form action="dashboard.html">
+	<input type="submit" value="Dashboard">
+	</form>
 </body>
 </html>
