--- a/src/main/webapp/payment.html
+++ b/src/main/webapp/payment.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Payment</title>
 </head>
-<body>
+<body align ="center">
 	<h1>Enter Payment Details</h1>
 	<form name="paymentDetails" method="POST" action="pay-online">	
 		First Name On Card : <input type="text" name="firstname" placeholder="John" required> <br/>
