--- a/src/main/webapp/changepassword.html
+++ b/src/main/webapp/changepassword.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Admin Login Page</title>
 </head>
-<body>
+<body align="center">
 	<a href="dashboard.html">Dashboard</a>
 	
 	<h1>Change Password</h1>
