--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -4,8 +4,10 @@
 <meta charset="UTF-8">
 <title>Admin Login Page</title>
 </head>
-<body>
-	<a href="index.html">Home</a>
+<body align="center">
+	<a href="index.html">
+	<input type="submit" value="Home">
+	</a>
 	
 	<h1>Admin Login Page</h1>
 	<form name="loginForm" method="POST" action="login">
